# aws-bedrock-work

./: main.py  pyproject.toml
src/: first-req.py  remote_agent_call.py
src/crew-ai/: quickstart.py
src/google-adk/: greeter_agent.py
