[project]
name = "aws-bedrock-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.54",
    "crewai>=1.6.1",
    "crewai-tools>=1.6.1",
    "dotenv>=0.9.9",
    "google-adk>=1.25.1",
    "openai>=2.21.0",
]
